option java_package = "com.xj.im.protocol.cs"; 
option java_outer_classname = "ChatMsgProto"; 


//CHAT_TEXT_SEND=10000005
message ChatTextMsg { 
  optional int64 senderUid = 1; //发送方
  optional int64 receiverUid = 2; //接收方
  optional string content = 3; //聊天内容
  optional int64 extType=4;//扩展类型
  optional int32 extLength=5;//扩展消息体长度 
  optional string senderName = 6; //发送方姓名
} 

//CHAT_IMAGE_SEND=10000006
message ChatImageMsg { 
  optional int64 senderUid = 1; //发送方
  optional int64 receiverUid = 2; //接收方
  optional string originalUrl = 3; //原图片的url
  optional string thumbUrl = 4; //缩略图的url
  optional string content = 5; //缩略图内容base64
  optional int64 extType=6;//扩展类型
  optional int32 extLength=7;//扩展消息体长度 
  optional string senderName = 8; //发送方姓名
} 

//CHAT_VOICE_SEND=10000007
message ChatVoiceMsg { 
  optional int64 senderUid = 1; //发送方
  optional int64 receiverUid = 2; //接收方
  optional string url = 3; //语音的url
  optional int32 voiceTime = 4; //语音时长
  optional int64 extType=5;//扩展类型
  optional int32 extLength=6;//扩展消息体长度 
  optional string senderName = 7; //发送方姓名
} 
//CHAT_ACK=20000005
message ChatAckMsg {
  optional int64  bodyExtType=1;//扩展类型, 如小秘书
  optional int32  bodyExtLength=2;//扩展长度
}





