option java_package = "com.xj.im.protocol.cs"; 
option java_outer_classname = "ShakeMsgProto"; 

//SHAKE_REQUEST=10000013;//发送抖动通知
message ShakeRequestMsg {
  optional int64 senderUid = 1; //发送方
  optional int64 receiverUid = 2; //接收方
  optional int64 extType=3;//扩展类型
  optional int32 extLength=4;//扩展消息体长度 
  optional string senderName = 5; //发送方名字    web端使用，手机端不用设置
} 
