option java_package = "com.xj.im.protocol.cs"; 
option java_outer_classname = "TypingMsgProto"; 

//TYPING_REQUEST=10000012;//正在输入
message TypingRequestMsg {
  optional int64 senderUid = 1; //发送方
  optional int64 receiverUid = 2; //接收方
  optional int64 extType=3;//扩展类型
  optional int32 extLength=4;//扩展消息体长度 
} 
 